--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>Home - More | Talent Tech</title>
   </head>
+
   <body>
-    <h1>Título Principal</h1>
+    <header>
+      <div class="container">
+        <a href="#">
+          <img src="./img/logo.svg" alt="Logo do projeto" />
+        </a>
+        <div class="right">
+          <a href="#" class="btn">
+            <span>More.design</span>
+            <img src="./img/arrow-right-up.svg" alt="Ícone de seta" />
+          </a>
+
+          <ul>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/davi-fernandes-05a737226/"
+                target="_blank"
+                ><img src="./img/icon-linkedin.svg" alt="Ícone do Linkedin"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/fernandes.236/" target="_blank"
+                ><img src="./img/icon-instagram.svg" alt="Ícone do Instagram" />
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <span class="tag">👉 ️100% FREE</span>
+      </div>
+    </header>
   </body>
 </html>
