--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>Home - More | Talent Tech</title>
+    <title>Home - Môre | Talent Tech</title>
   </head>
 
   <body>
@@ -44,5 +44,43 @@
         <span class="tag">👉 ️100% FREE</span>
       </div>
     </header>
+
+    <section class="s-hero">
+      <div class="container">
+        <div class="left">
+          <img src="./img/star.svg" class="star" alt="star">
+          <h1>Curso completo em design de produto digital</h1>
+          <p>
+            O programa Môre Educação irá trazer novos conhecimento através de
+            aulas teóricas e práticas focado no processo de
+            <strong> Design Centrado no Usuário </strong>
+          </p>
+
+          <form>
+            <input type="email" placeholder="Insira seu e-mail" />
+            <button type="submit">Realizar pré-cadastro</button>
+          </form>
+
+          <ul>
+            <li><img src="./img/red.svg" alt="Rede" /></li>
+            <li><img src="./img/itau.svg" alt="Ítau" /></li>
+            <li><img src="./img/smile.svg" alt="Smiles" /></li>
+            <li><img src="./img/marisa.svg" alt="Marisa" /></li>
+          </ul>
+
+          <div class="review">
+            <img src="./img/users.png" alt="usuários" />
+            <span>
+              <img src="./img/star-red.svg" alt="star" />
+              <strong>4.9</strong>
+              (review)
+            </span>
+          </div>
+        </div>
+        <div class="right">
+          <img src="./img/ilustration.png" alt="Imagem Ilustrativa" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
