--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="s-hero">
       <div class="container">
         <div class="left">
-          <img src="./img/star.svg" class="star" alt="star">
+          <img src="./img/star.svg" class="star" alt="star" />
           <h1>Curso completo em design de produto digital</h1>
           <p>
             O programa Môre Educação irá trazer novos conhecimento através de
@@ -79,6 +79,38 @@
         </div>
         <div class="right">
           <img src="./img/ilustration.png" alt="Imagem Ilustrativa" />
+        </div>
+      </div>
+    </section>
+
+    <section class="s-card">
+      <div class="container">
+        <div class="card">
+          <div class="icon">
+            <img src="./img/icon-triangle.svg " alt="Triangulo" />
+          </div>
+          <div class="text">
+            <h3>18 módulos</h3>
+            <p>Trilha de design e gestão de produtos</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="icon">
+            <img src="./img/icon-square.svg " alt="Quadrado" />
+          </div>
+          <div class="text">
+            <h3>Aulas online e ao vivo</h3>
+            <p>Terças e quintas às 19h</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="icon">
+            <img src="./img/icon-layers.svg " alt="Retangulo" />
+          </div>
+          <div class="text">
+            <h3>Projetos reais na prática</h3>
+            <p>Consilar o conhecimento</p>
+          </div>
         </div>
       </div>
     </section>
